--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: deploy
 on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '43 5 * * *'
   workflow_dispatch:
 jobs:
   build:
